// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing loresheet action creators should create a buy option action 1`] = `
Object {
  "meta": Object {
    "inHistory": true,
  },
  "payload": Object {
    "cost": Object {
      "canPay": true,
      "destiny": 0,
      "original": 0,
    },
    "lsUid": "wulinsage",
    "payload": undefined,
    "uid": "fact",
  },
  "type": "loresheet/BUY_OPTION",
}
`;

exports[`Testing loresheet action creators should create an open action 1`] = `
Object {
  "meta": Object {
    "inHistory": true,
  },
  "payload": Object {
    "cost": Object {
      "canPay": true,
      "destiny": 0,
      "original": 0,
    },
    "uid": "wulinsage",
  },
  "type": "loresheet/OPEN",
}
`;
